<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:id="@+id/bottom_sheet"
              android:layout_width="match_parent"
              android:layout_height="350dp"
              android:background="@android:color/white"
              android:clipToPadding="true"
              android:orientation="vertical"
              android:padding="10dp"
              app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <com.pocketmarket.mined.widget.CustomFontTextView
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/icon_product"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/item"
        android:textSize="16sp"
        custom:customFont="fonts/SourceSansPro-Regular.ttf" />

    <com.pocketmarket.mined.widget.CustomFontTextView
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/icon_popup_balance"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/balance_analytics"
        android:textSize="16sp"
        custom:customFont="fonts/SourceSansPro-Regular.ttf" />

    <com.pocketmarket.mined.widget.CustomFontTextView
        android:id="@+id/trucks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/icon_delivery"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/trucks"
        android:textSize="16sp"
        custom:customFont="fonts/SourceSansPro-Regular.ttf" />

    <com.pocketmarket.mined.widget.CustomFontTextView
        android:id="@+id/stocks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/icon_popup_stocks"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/stocks"
        android:textSize="16sp"
        custom:customFont="fonts/SourceSansPro-Regular.ttf" />

    <com.pocketmarket.mined.widget.CustomFontTextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/settings"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/settings"
        android:textSize="16sp"
        custom:customFont="fonts/SourceSansPro-Regular.ttf" />

    <com.pocketmarket.mined.widget.CustomFontTextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="right"
        android:padding="10dp"
        android:text="@android:string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/button_blue"
        android:textSize="16sp"
        custom:customFont="fonts/SourceSansPro-Regular.ttf" />

</LinearLayout>