<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#437ae8">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
    >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@mipmap/logo"
        />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginBottom="100dp"
        />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_gravity="center"
        />
    </LinearLayout>
    <com.facebook.login.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="#465993"
        android:layout_alignParentBottom="true"
        fb:com_facebook_login_text="@string/signup_facebook"
        fb:com_facebook_logout_text="@string/logout"
    />

</RelativeLayout>